@@ -89,3 +89,7 @@ D: Bug report #70 (Wrong NOOP response code)
 N: Rauli Ruohonen
 D: Bug report #71 (Socket handles are leaked when a data transfer is in progress
    and user QUITs)
+
+N: Equand
+E: equand@gmail.com
+D: Bug report #77 (incorrect OOB data management on FreeBSD).
